samples/_failures_safe/1761538880_db40b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f85bea74.c:159: error: expected ‘;’, ‘,’ or ‘)’ at end of input
